Se termina la parte del backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8090
+############# Mail Properties #######################
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=0e1d525cad2af3
+spring.mail.password=f9c3a47b8917ae
+spring.mail.protocol=smtp
+############ JWT Properties #####################
+jwt.expiration.time=900000
+jwt.public.key=classpath:app.pub
+## This is strictly for demo purpose only,
+# DO NOT define the private key in the repository like this in your personal projects
+jwt.private.key=classpath:app.key
